--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "backend": "json-server --watch db.json --port 5000"
   },
   "dependencies": {
-    "vue": "^3.2.45"
+    "vue": "^3.2.45",
+    "vue-router": "^4.0.13"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
